# telecom-churn-react-agent

./: .gitignore  README.md  main.py  output.txt  pyproject.toml
src/: api.py  config.py  react_agent.py  telecom_data.py  tools.py
tests/: test_api.py  test_tools.py
